<?xml version="1.0" encoding="utf-8"?>
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
    android:supportsSwitchingToNextInputMethod="true">
    <subtype
        android:imeSubtypeLocale="ar"
        android:imeSubtypeMode="keyboard"
        android:label="@string/subtype_ar" />
    <subtype
        android:imeSubtypeLocale="en_US"
        android:imeSubtypeMode="keyboard"
        android:label="@string/subtype_en" />
    <subtype
        android:imeSubtypeLocale="fr_FR"
        android:imeSubtypeMode="keyboard"
        android:label="@string/subtype_fr" />
    <subtype
        android:imeSubtypeLocale="es_ES"
        android:imeSubtypeMode="keyboard"
        android:label="@string/subtype_es" />
    <subtype
        android:imeSubtypeLocale="tr_TR"
        android:imeSubtypeMode="keyboard"
        android:label="@string/subtype_tr" />
    <subtype
        android:imeSubtypeLocale="de_DE"
        android:imeSubtypeMode="keyboard"
        android:label="@string/subtype_de" />
    <subtype
        android:imeSubtypeLocale="ur_PK"
        android:imeSubtypeMode="keyboard"
        android:label="@string/subtype_ur" />
    <subtype
        android:imeSubtypeLocale="fa_IR"
        android:imeSubtypeMode="keyboard"
        android:label="@string/subtype_fa" />
    <subtype
        android:imeSubtypeLocale="ru_RU"
        android:imeSubtypeMode="keyboard"
        android:label="@string/subtype_ru" />
</input-method>
